--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "My Extension",
+  "name": "transcription",
   "version": "1.0.0",
 
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+
   "action": {
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    },
     "default_popup": "index.html"
   },
 
